添加Activity 进入，退出动画

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 
     <color name="black_overlay">#66000000</color>
 
+    <color name="transparent">#00000000</color>
+
+    <color name="gray">#BFBFBFBF</color>
 </resources>
