--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,9 +4,8 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
 
-        <!--<item name="android:windowBackground">@color/black_overlay</item>-->
+        <item name="android:activityOpenEnterAnimation">@anim/anim_slide_to_left</item>
 
-        <!--<item name="android:windowIsTranslucent">true</item>-->
     </style>
 
     <style name="FullscreenTheme" parent="android:Theme.NoTitleBar">
