--- a/app/src/main/res/layout/fragment_discovery_recommend.xml
+++ b/app/src/main/res/layout/fragment_discovery_recommend.xml
@@ -12,5 +12,11 @@
             android:text="启动新Activity"
             />
 
+    <Button
+            android:id="@+id/btnSettings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="启动设置"
+            />
 
 </LinearLayout>
