--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
 
-        <item name="android:activityOpenEnterAnimation">@anim/anim_slide_to_left</item>
+        <!--<item name="android:activityOpenEnterAnimation">@anim/anim_slide_to_left</item>-->
 
     </style>
 
