--- a/app/src/main/res/layout/fragment_discovery_recommend.xml
+++ b/app/src/main/res/layout/fragment_discovery_recommend.xml
@@ -5,18 +5,10 @@
              tools:context="com.shuhuan.zufeng.app.fragments.DiscoveryFragment">
 
 
-    <Button
-            android:id="@+id/btn_recommend"
+    <ListView
+            android:id="@+id/discovery_recommend_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="启动新Activity"
-            />
-
-    <Button
-            android:id="@+id/btnSettings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="启动设置"
             />
 
 </LinearLayout>
