--- a/app/src/main/res/layout/item_recommend_album.xml
+++ b/app/src/main/res/layout/item_recommend_album.xml
@@ -52,8 +52,9 @@
                 >
             <!-- 下面的控件都是通过 getChildAt（） 来获取-->
             <ImageButton
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:scaleType="center"
                     android:src="@mipmap/ic_launcher"
                     />
 
@@ -78,7 +79,7 @@
                 >
             <!-- 下面的控件都是通过 getChildAt（） 来获取-->
             <ImageButton
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/ic_launcher"
                     />
@@ -103,7 +104,7 @@
                 >
             <!-- 下面的控件都是通过 getChildAt（） 来获取-->
             <ImageButton
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/ic_launcher"
                     />
