--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -12,20 +12,20 @@
             android:layout_height="wrap_content"
             >
         <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@mipmap/ic_launcher"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
                 />
         <ImageButton
                 android:id="@+id/discovery_title_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="20dp"
-                android:src="@android:drawable/ic_search_category_default"
+                android:src="@mipmap/ic_action_search"
                 />
     </RelativeLayout>
 
