--- a/app/src/main/res/layout/item_recommend_album.xml
+++ b/app/src/main/res/layout/item_recommend_album.xml
@@ -17,10 +17,11 @@
                 android:layout_height="wrap_content"
                 android:drawableLeft="@mipmap/ic_launcher"
                 android:gravity="center_vertical"
+                android:layout_alignParentTop="true"
+
                 android:textSize="20sp"
                 android:textColor="#000"
                 android:text="小编推荐"
-                android:layout_centerHorizontal="true"
                 />
 
         <TextView
@@ -52,9 +53,7 @@
                 >
             <!-- 下面的控件都是通过 getChildAt（） 来获取-->
             <ImageButton
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scaleType="center"
+                    style="@style/DiscoverRecommend.AlbumImage"
                     android:src="@mipmap/ic_launcher"
                     />
 
@@ -79,8 +78,7 @@
                 >
             <!-- 下面的控件都是通过 getChildAt（） 来获取-->
             <ImageButton
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/DiscoverRecommend.AlbumImage"
                     android:src="@mipmap/ic_launcher"
                     />
 
@@ -104,8 +102,7 @@
                 >
             <!-- 下面的控件都是通过 getChildAt（） 来获取-->
             <ImageButton
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/DiscoverRecommend.AlbumImage"
                     android:src="@mipmap/ic_launcher"
                     />
 
